# rosbag-standalone

./: .gitignore  README.md  pyproject.toml
src/genpy/: __init__.py  dynamic.py  generate_initpy.py  generator.py  genpy_main.py  message.py
src/rosbag/: __init__.py  bag.py
src/rosbag/genpy/: __init__.py
