[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rosbag-standalone"
version = "1.17.4"
description = "Standalone version of the ROS1 rosbag library - Python package for reading and writing ROS1 bag files."
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Willow Garage, ROS Community" }
]
maintainers = [
    { name = "Martin Valgur", email = "martin.valgur@gmail.com" }
]
requires-python = ">=3.7"
dependencies = [
    "PyYAML",
    "lz4",
]
keywords = ["ros", "ros1", "rosbag", "robotics"]

[project.urls]
Homepage = "https://github.com/valgur/rosbag-standalone"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
